	http://www.worldagroforestry.org/output/tree-diversity-analysis

	The manual accompanying the original version of BiodiversityR is available from:
	http://www.worldagroforestry.org/downloads/Publications/PDFS/B13695.pdf

	An article that documents the ensemble suitability modelling options of BiodiversityR
	is available from https://doi.org/10.1016/j.envsoft.2017.11.009

	Various scripts for creating publication-ready graphs with ggplot2 are available from:
	https://rpubs.com/Roeland-KINDT


version 2-15.3 (September 2023)

  * Modified function ensemble.envirem.run to use envirem::generateEnvirem()
  
  * Included reference to TreeGOER: A database with globally observed environmental ranges 
  for 48,129 tree species. Global Change Biology https://doi.org/10.1111/gcb.16914


version 2-15.2 (May 2023)

  * New function ensemble.Tjur() to calculate Tjur's Coefficient of Discrimination for
  logistic regression models.
  
  * Modified function ensemble.evaluate() to include results from ensemble.Tjur().
  
  * Corrected function ensemble.envirem.run() to work with newer versions of terra.
  
  * Updated citation of van Zonneveld et al. 2023 in the documentation of function
  ensemble.concave.hull().


version 2-15.1 (January 2023; King Gizzard & the Lizzard Wizard Omnium Gatherum version)

  * Removed dependencies on rgdal, rgeos and maptools (requested by Roger Bivand on 19-DEC)
  
  * New function ensemble.outliers() to identify outliers in multivariate space based on
  user-defined number of variables and multiples of interquartile range distance.
  
  * Modified function ensemble.chull.create() to remove use of rgeos::gBuffer.
  
  * Modified function ensemble.plot() to remove use of maptools 'wrld_simpl' data set.
  
  * Modified function ensemble.chull.apply() to save the masked suitability rasters in the
  'chull' subdirectory rather than overwriting the input files.
  
  * The default output format for ensemble suitability methods that use the raster package