@@ -431,6 +431,7 @@
     item    helpMenu        command         "Using R Markdown"                              browseRMarkdown             ""          ""
     item    topMenu         cascade         "Help"                                          helpMenu                    ""          ""
 
+
     # Biodiversity analysis (R. Kindt, World Agroforestry Centre)
     # DEC 2018
 
@@ -532,5 +533,8 @@
     item    ensMenu         cascade         "Absence data set"                              absMenu                     ""          ""
     item    ensMenu         cascade         "Ensemble suitability modeling"                 calibMenu                   ""          ""
     item    biodivMenu      cascade         "Help"                                          helpbioMenu                 ""          ""
+
+
+
 
 
